# bobui

./: .cmake.conf  .gitignore  REUSE.toml  config_help.txt  configure.cmake  licenseRule.json  qt_cmdline.cmake
OmniUI/: AGENTS.md  (+7 more)
src/corelib/doc/snippets/: CMakeLists.txt  hellotrmain.cpp
src/corelib/doc/snippets/buffer/: buffer.cpp
src/corelib/doc/snippets/code/: CMakeLists.txt  doc_src_containers.cpp  doc_src_groups.cpp  doc_src_objecttrees.cpp  doc_src_properties.cpp  doc_src_qalgorithms.cpp  doc_src_qcache.cpp  doc_src_qiterator.cpp  doc_src_qnamespace.cpp  doc_src_qplugin.cpp  doc_src_qset.cpp  doc_src_qvarlengtharray.cpp  doc_src_resources.cpp  src_corelib_animation_qparallelanimationgroup.cpp  src_corelib_animation_qpropertyanimation.cpp  src_corelib_animation_qsequentialanimationgroup.cpp  src_corelib_animation_qvariantanimation.cpp  src_corelib_concurrent_qthreadpool.cpp  src_corelib_global_qglobal.cpp  src_corelib_global_qglobal_widgets.cpp  src_corelib_global_qlogging.cpp  src_corelib_global_qnumeric.cpp  src_corelib_global_qoperatingsystemversion.cpp  src_corelib_global_qrandom.cpp  src_corelib_io_qdatastream.cpp  src_corelib_io_qdebug.cpp  src_corelib_io_qdir.cpp  src_corelib_io_qdiriterator.cpp  src_corelib_io_qdirlisting.cpp  src_corelib_io_qfile.cpp  src_corelib_io_qfileselector.cpp  src_corelib_io_qiodevice.cpp  src_corelib_io_qprocess.cpp  src_corelib_io_qsettings.cpp  src_corelib_io_qstorageinfo.cpp  src_corelib_io_qtemporarydir.cpp  src_corelib_io_qtemporaryfile.cpp  src_corelib_io_qtextstream.cpp  src_corelib_io_qurl.cpp  src_corelib_kernel_qabstractitemmodel.cpp  (+66 more)
src/corelib/doc/snippets/eventfilters/: CMakeLists.txt
src/corelib/doc/snippets/events/: events.cpp
src/corelib/doc/snippets/file/: file.cpp
src/corelib/doc/snippets/jni/: src_qjniobject.cpp
src/corelib/doc/snippets/qdir-listfiles/: main.cpp
src/corelib/doc/snippets/qgenericitemmodel/: main.cpp
src/corelib/doc/snippets/qlogging/: qlogging.cpp
src/corelib/doc/snippets/qmetaobject-invokable/: CMakeLists.txt
src/corelib/doc/snippets/qmetaobject-revision/: CMakeLists.txt
src/corelib/doc/snippets/qmetatype/: registerConverters.cpp
src/corelib/doc/snippets/qprocess/: CMakeLists.txt  qprocess-createprocessargumentsmodifier.cpp  qprocess-simpleexecution.cpp
src/corelib/doc/snippets/qrangemodel/: main.cpp
src/corelib/doc/snippets/qrangemodeladapter/: main.cpp
src/corelib/doc/snippets/qsignalmapper/: CMakeLists.txt  buttonwidget.cpp  buttonwidget.h
src/corelib/doc/snippets/qsortfilterproxymodel-details/: main.cpp
src/corelib/doc/snippets/qstack/: main.cpp
src/corelib/doc/snippets/qstring/: main.cpp  stringbuilder.cpp
src/corelib/doc/snippets/qstringlist/: main.cpp
src/corelib/doc/snippets/qstringlistmodel/: main.cpp
src/corelib/doc/snippets/qtcast/: qtcast.cpp
src/corelib/doc/snippets/qversionnumber/: main.cpp
src/corelib/doc/snippets/settings/: settings.cpp
src/corelib/doc/snippets/sharedemployee/: employee.h
src/gui/doc/snippets/: CMakeLists.txt
src/gui/doc/snippets/clipboard/: clipwindow.cpp  clipwindow.h
src/gui/doc/snippets/code/: CMakeLists.txt  src_gui_image_qicon.cpp  src_gui_kernel_qaction.cpp  src_gui_kernel_qkeysequence.cpp  src_gui_kernel_qshortcut.cpp  src_gui_painting_qpainter.cpp  src_gui_painting_qpainterstateguard.cpp  src_gui_util_qundostack.cpp
src/gui/doc/snippets/draganddrop/: dragwidget.h
src/gui/doc/snippets/dragging/: mainwindow.cpp  mainwindow.h
src/gui/doc/snippets/droparea/: droparea.cpp
src/gui/doc/snippets/picture/: picture.cpp
src/gui/doc/snippets/qfileopenevent/: Info.plist  main.cpp
src/gui/doc/snippets/separations/: finalwidget.h
src/gui/doc/snippets/textblock-fragments/: xmlwriter.h
src/gui/doc/snippets/textdocument-blocks/: mainwindow.cpp  mainwindow.h
src/gui/doc/snippets/textdocument-frames/: mainwindow.h
src/gui/doc/snippets/textdocument-listitems/: mainwindow.h
src/gui/doc/snippets/textdocument-listitemstyles/: mainwindow.h
src/gui/doc/snippets/textdocument-printing/: mainwindow.cpp  mainwindow.h
src/gui/doc/snippets/textdocument-selections/: mainwindow.h
src/gui/doc/snippets/textdocument-tables/: mainwindow.h
src/plugins/tls/: CMakeLists.txt
src/plugins/tls/certonly/: CMakeLists.txt
src/plugins/tls/openssl/: CMakeLists.txt  qdtls_openssl.cpp  qdtls_openssl_p.h  qsslcontext_openssl.cpp  qsslcontext_openssl_p.h  qsslsocket_openssl_symbols.cpp  qsslsocket_openssl_symbols_p.h  qtls_openssl.cpp  qtlsbackend_openssl.cpp  qtlskey_openssl.cpp  qtlskey_openssl_p.h  qx509_openssl.cpp  qx509_openssl_p.h
src/plugins/tls/schannel/: CMakeLists.txt  qtls_schannel.cpp  qtls_schannel_p.h  qx509_schannel.cpp  qx509_schannel_p.h
src/plugins/tls/securetransport/: CMakeLists.txt  qtls_st_p.h
src/plugins/tls/shared/: qasn1element.cpp  qasn1element_p.h  qdtls_base_p.h  qsslsocket_qt.cpp  qtlskey_generic.cpp
src/widgets/doc/snippets/: CMakeLists.txt  mainwindowsnippet.cpp  widgetdelegate.cpp
src/widgets/doc/snippets/code/: CMakeLists.txt  doc_src_model-view-programming.cpp  doc_src_qt4-mainwindow.cpp  doc_src_qt4-styles.cpp  doc_src_styles.cpp  doc_src_stylesheet.cpp  src_gui_dialogs_qfiledialog.cpp  src_gui_dialogs_qfontdialog.cpp  src_gui_dialogs_qmessagebox.cpp  src_gui_dialogs_qwizard.cpp  src_gui_effects_qgraphicseffect.cpp  src_gui_graphicsview_qgraphicsgridlayout.cpp  src_gui_graphicsview_qgraphicsitem.cpp  src_gui_graphicsview_qgraphicslinearlayout.cpp  src_gui_graphicsview_qgraphicsproxywidget.cpp  src_gui_graphicsview_qgraphicsscene.cpp  src_gui_graphicsview_qgraphicssceneevent.cpp  src_gui_graphicsview_qgraphicsview.cpp  (+1 more)
tests/auto/cmake/test_android_signing/: CMakeLists.txt  main.cpp  verify_signature.cmake
tests/auto/cmake/test_read_qt_namespace/: CMakeLists.txt  main.cpp
tests/auto/cmake/test_wrap_cpp_moc/: CMakeLists.txt
tests/auto/cmake/test_wrap_cpp_multiple_calls/: CMakeLists.txt
tests/auto/cmake/test_wrap_cpp_target_moc_in_subdir/: CMakeLists.txt
tests/auto/cmake/test_wrap_cpp_target_multiple_calls/: CMakeLists.txt  main.cpp
tests/auto/other/android/: CMakeLists.txt
(+2439 files in other folders)
